--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ REACT_APP_AUTO_RELOAD_INTERVAL_TIME=10000
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
 
-REACT_APP_NODEOS_DEFAULT_PATH=http://localhost:8888
+REACT_APP_NODEOS_DEFAULT_PATH=http://47.107.138.103:8888
