--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express": "^4.16.4",
     "open": "^6.3.0",
     "pm2": "^3.5.0",
-    "socket.io-client": "^2.2.0"
+    "reactstrap": "^8.4.1",
+    "socket.io-client": "^2.2.0",
+    "store": "^2.0.12"
   },
   "bin": {
     "eosio-explorer": "./cli.sh"
