--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "pm2": "^3.5.0",
     "reactstrap": "^8.4.1",
     "socket.io-client": "^2.2.0",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "history": "latest"
   },
   "bin": {
     "eosio-explorer": "./cli.sh"
